--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
+
+* {
+  /* hide scrollbar */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  /* hide scrollbar for chrome */
+
+  /* hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+html,
+body,
+#__next {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: #1a1b1d;
+}
