feat: 연락처 리스트 골격 세팅

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,8 @@
   /* hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+
+  color: white;
 }
 
 *::-webkit-scrollbar {
