feat(Calendar): 년도 표시 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,6 +47,8 @@
   color: white;
   font-family: "Pretendard" !important;
   font-weight: 400;
+
+  box-sizing: border-box;
 }
 
 *:not(input):not(textarea) {
