--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,3 +72,14 @@ body,
   background-color: #1a1b1d;
   color: white;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  color: white !important;
+  -webkit-text-fill-color: white !important;
+  -webkit-box-shadow: 0 0 0 1000px #353639 inset !important;
+  -webkit-background-clip: text !important;
+  background-clip: text !important;
+}
